syntax = "proto3";

package user;

option go_package = "protos/user";
service UserService {
  rpc AuthenticateUser (AuthenticateRequest) returns (AuthenticateResponse);
  rpc GetUserDetails (GetUserRequest) returns (GetUserResponse);
  rpc UpdateUserDetails (UpdateUserRequest) returns (UpdateUserResponse);
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string userId = 1;
  string username = 2;
  bool authenticated = 3;
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  string userId = 1;
  string username = 2;
  string email = 3;
  string status = 4;  // Active, Inactive, etc.
}

message UpdateUserRequest {
  string userId = 1;
  string username = 2;
  string email = 3;
}

message UpdateUserResponse {
  bool success = 1;
}
